--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://player.8i.com/release/latest/volcap-player.js"></script>
 
     <script src="https://jeromeetienne.github.io/AR.js/aframe/build/aframe-ar.js"></script>
+    <script src="./components.js"></script>
 </head>
 
 <body>
